Added AWS S3 service,Redis Caching and Validation on User input